Make sure tabs in settings are visible

--- a/symphony/assets/css/src/symphony.tabs.less
+++ b/symphony/assets/css/src/symphony.tabs.less
@@ -53,4 +53,13 @@ ul.tabs {
 			background-image: var(--veil);
 		}
 	}
+
+	/* Make sure tabs in settings are visible --------*/
+	.settings & {
+		position: relative;
+
+		&>li {
+			border-bottom: none;
+		}
+	}
 }
